tests/good/22_multiple_functions.src
# Test: Multiple functions
int multiply(int a, int b) {
    return a * b;
}

int square(int x) {
    return multiply(x, x);
}

void main([string] args) {
    print_int(square(5));
}
